changed swipe range, and other small things

--- a/food/static/food/tel.html
+++ b/food/static/food/tel.html
@@ -28,7 +28,7 @@
             return;
           }
 
-          $.post( 'http://128.199.140.174:8000/foodporn/verify/', {handphone: handphone}, function(data) {
+          $.post( 'http://localhost:8000/foodporn/verify/', {handphone: handphone}, function(data) {
             if (data.success) {
               $('.status').text('Message Sent');
             } else {
