--- a/food/static/food/tel.html
+++ b/food/static/food/tel.html
@@ -1,8 +1,24 @@
-<html><head><style>
+<html>
+  <head>
+    <style>
       #phone-numbers {
         height: 200px;
       }
-    </style><link rel=stylesheet href=css/foundation.css></head><body>Enter phone number:<br><input id=phone-number><br><p id=output></p><button class=submit>Send SMS</button><br><script src=scripts/libs/jquery-1.11.1.min.js></script><script type=text/javascript>
+    </style>
+
+    <link rel="stylesheet" href="css/foundation.css">
+  </head>
+
+  <body>
+    Enter phone number: <br />
+    <input id="phone-number"></input> <br />
+    <p id="output"></p>
+
+    <button class="submit">Send SMS</button> <br/ >
+
+    <script src="scripts/libs/jquery-1.11.1.min.js"></script>
+
+    <script type="text/javascript">
       (function() {
 
         // attach event listener to listen for changes to our text area
@@ -28,7 +44,7 @@
             return;
           }
 
-          $.post( 'http://localhost:8000/foodporn/verify/', {handphone: handphone}, function(data) {
+          $.get( 'http://localhost:8000/foodporn/verify/', {handphone: handphone}, function(data) {
             if (data.success) {
               $('.status').text('Message Sent');
             } else {
@@ -45,4 +61,6 @@
         });
 
       })();
-    </script></body><html></html></html>
+    </script>
+  </body>
+<html>
