--- a/food/static/food/tel.html
+++ b/food/static/food/tel.html
@@ -44,7 +44,7 @@
             return;
           }
 
-          $.get( 'http://localhost:8000/foodporn/verify/', {handphone: handphone}, function(data) {
+          $.get( 'http://http://128.199.140.174/:8000/foodporn/verify/', {handphone: handphone}, function(data) {
             if (data.success) {
               $('.status').text('Message Sent');
             } else {
