--- a/food/static/food/tel.html
+++ b/food/static/food/tel.html
@@ -7,6 +7,7 @@
       }*/
       body {
         padding-top: 5%;
+        padding-bottom: 5%;
       }
       .banner {
         margin-bottom: 10px;
